# DataForge

./: .claude_project_context.md  .coverage  .env  .env.example  .env.local  .env.production  .eslintrc.cjs  .gitignore  .vscode-settings.json  00_DOCUMENTATION_MAP.md  BACKEND_MIGRATION_PLAN.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CUSTOM_INSTRUCTIONS.md  CLAUDE_INTEGRATION_README.md  CONSOLIDATED_DOCUMENTATION_INDEX.md  Cortex_VSCode_Context.md  DOCUMENTATION_CONSOLIDATION_REPORT_DEC_5_2025.md  DOCUMENTATION_GUIDE.txt  DOCUMENTATION_ORGANIZATION_COMPLETE.md  Dockerfile  FORGE_COMMAND_SETUP_GUIDE.md  FORGE_CONTEXT.md  FORGE_DOCUMENTATION_CONSOLIDATION_COMPLETE_DEC_5_2025.md  INDEX.md  INTEGRATION_TEST_RESULTS.md  LICENSE  LLM_PROVIDER_INTEGRATION_COMPLETE.md  MULTI_AI_PLANNING_IMPLEMENTATION_STATUS.md  MULTI_GENRE_SETUP_GUIDE.md  Makefile  NEUROFORGE_LEARNING_AND_DATAFORGE_COMBINED.md  NEXT_STEPS.md  PHASE_2_1_SUMMARY.md  PHASE_3_3_COMPLETION_SUMMARY.md  PHASE_3_LEARNING_LAYER_PLAN.md  PHASE_4.1_COMPLETE_SUMMARY.md  PHASE_4.2_COMPLETE_SUMMARY.md  PHASE_5_IMPLEMENTATION_PLAN.md  QUICK_REFERENCE.md  (+70 more)
.claude/: VF-400_completion_report.md  context.md  cortex-todo.md  phase4_plan.md  todo.md
.claude-backup-20251203-190324/: .claude_project_context.md
.github/: CICD_CONFIG.md
AuthorForge/: .env.example  README.md  requirements.txt
DataForge/: .coverage  .dockerignore  .env.example  .env.production  .gitignore  ARCHITECTURE.md  (+44 more)
ForgeCommand/src-tauri/: Cargo.toml  ForgeAgents_Integration_Updated.md  tauri.conf.json
ForgeCommand/src-tauri/src/: main.rs
vibeforge-backend/: .env.example  .gitignore  00_DELIVERY_SUMMARY.md  API_REFERENCE.md  ARCHITECTURE.md  DELIVERY_MANIFEST.md  DEPLOYMENT_GUIDE.md  DEPRECATED.md  DOCUMENTATION_MAP.md  Dockerfile  FRONTEND_API_CLIENT.ts  FRONTEND_API_TYPES.ts  IMPLEMENTATION_API_COMPLETE.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  INDEX.md  INTEGRATION_GUIDE.md  INTEGRATION_SETUP.md  PYTHON_RUST_README.md  QUICKREF.md  README.md  START_HERE.md  UNIFIED_LLM_FINAL_DELIVERY.md  build_rust.sh  demo_vibeforge_prompt.py  integration_example.py  integration_test.sh  llm_service_examples.py  pyproject.toml  setup.sh  test_implementation.py  test_llm_service.py  verify_integration.sh  vibeforge_plans.md
vibeforge-backend/.github/: copilot-instructions.md
vibeforge-backend/app/clients/: dataforge_client.py
vibeforge-backend/app/middleware/: wizard_logging.py
vibeforge-backend/app/services/: experience_context.py
vibeforge-backend/data/: .gitkeep
vibeforge-backend/docs/archive/: API_IMPLEMENTATION_SUMMARY.md  DELIVERY_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_COMPLETE.md  LLM_SERVICE_COMPLETION.md  LLM_SERVICE_IMPLEMENTATION.md  VERIFICATION_CHECKLIST.md  llm_service_quickref.md
vibeforge-backend/docs/guides/: FORGE_ECOSYSTEM_INTEGRATION_ARCHITECTURE.md  RUST_INTEGRATION_QUICKREF.md
vibeforge-backend/docs/references/: INTEGRATION_INDEX.md  LLM_SERVICE_DOCS_INDEX.md  PYTHON_RUST_INTEGRATION_SUMMARY.md  TECHNICAL_DUE_DILIGENCE_EXECUTIVE_SUMMARY.md  TECHNICAL_DUE_DILIGENCE_INDEX.md  TECHNICAL_DUE_DILIGENCE_QUICK_REFERENCE.md  TECHNICAL_DUE_DILIGENCE_REVIEW.md
vibeforge-backend/docs/setup/: BUILD_INSTRUCTIONS.md  DEVELOPER_QUICKSTART.md  QUICKSTART.md
vibeforge-backend/python/: __init__.py
vibeforge-backend/python/app/: main.py
vibeforge-backend/python/app/models/: __init__.py  vibeforge_models.py
vibeforge-backend/python/app/repositories/: __init__.py  runs_file.py
vibeforge-backend/python/app/routers/: __init__.py  adaptive.py  dataforge.py  neuroforge.py  vibeforge.py
vibeforge-backend/python/app/services/: __init__.py  llm_service.py
vibeforge-backend/python/app/storage/: __init__.py  json_storage.py
vibeforge-backend/rust/: Cargo.toml
vibeforge-backend/rust/forge_core/: Cargo.toml
vibeforge-backend/rust/forge_core/src/: lib.rs
vibeforge-backend/rust/forge_data/: Cargo.toml
vibeforge-backend/rust/forge_data/src/: lib.rs
vibeforge-backend/rust/forge_eval/: Cargo.toml
vibeforge-backend/rust/forge_eval/src/: lib.rs
vibeforge-backend/rust/forge_prompt/: Cargo.toml
vibeforge-backend/rust/forge_prompt/src/: lib.rs
(+863 files in other folders)
