[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "vibeforge-backend"
version = "0.1.0"
description = "VibeForge backend with FastAPI + Rust (PyO3) performance layer"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "VibeForge Team" }]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "maturin>=1.0,<2.0",
]

[tool.maturin]
# Build the vibeforge_prompt extension module from rust/forge_prompt
module-name = "vibeforge_prompt"
python-source = "python"
manifest-path = "rust/forge_prompt/Cargo.toml"
features = ["pyo3/extension-module"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W"]
