[workspace]
members = ["forge_core", "forge_prompt", "forge_data", "forge_eval"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["VibeForge Team"]
license = "MIT"

[workspace.dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
