[package]
name = "forge_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pyo3 = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
uuid = { workspace = true }
chrono = { workspace = true }
thiserror.workspace = true

[lib]
name = "forge_core"
crate-type = ["cdylib"]
