[package]
name = "forge_eval"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pyo3 = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
uuid = { workspace = true }
chrono = { workspace = true }

[lib]
name = "forge_eval"
crate-type = ["cdylib"]
