[package]
name = "forge_prompt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pyo3 = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
uuid = { workspace = true }
chrono = { workspace = true }
regex = "1.10"
forge_core = { path = "../forge_core" }

[lib]
name = "forge_prompt"
crate-type = ["cdylib"]
